falta pulir detalles minimos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,97 @@ font-family: 'Raleway', sans-serif;
 */
 
 /* Escribe tu código acá debajo */
+/* ATRIBUTOS GENERALES */
+
+*{
+	margin: 0; 
+	padding: 0; 
+	box-sizing: border-box; 
+	font-family: 'Raleway', sans-serif;
+	
+	/*	font-color: white;*/
+}
+
+/*.pandas{
+
+	filter: grayscale(100%);
+No funciono hacer una clase y agregar blanco y negro para todos de una vez?
+}
+*/
+.header {
+	background-color: #F78E69;
+	background-size: cover;
+	background-position: center;
+	color: #FFFCFC;
+	text-align: right;
+	padding: 70px 30px 20px;
+
+}
+
+h1 { 
+	font-size: 36px;
+
+}
+h4 {
+	padding: 20px;
+}
+
+/* PANDA 1 */
+
+.panda1{
+	background: url('../img/uno.jpg'); 
+	background-size: cover; 
+	background-position: center; 
+	padding: 250px; 
+	filter: grayscale(100%);
+
+}
+
+/* FONDO VERDE */
+.colorverde{
+	background-color: #ABE188;
+	padding: 250px;
+	text-align: center;
+}
+
+/* SECCION ABOUT */
+
+.about{
+	color: white;
+	background-color: #F78E69;
+	margin: 20px;
+	padding: 50px;
+
+}
+/* PANDA 2 */
+
+.panda2{
+	background: url('../img/dos.jpg'); 
+	background-size: cover; 
+	background-position: center; 
+	padding: 250px; 
+	filter: grayscale(100%);
+	
+}
+
+/* PANDA 3 */
+.panda3{
+	background: url('../img/tres.jpg'); 
+	background-size: cover; 
+	background-position: center; 
+	padding: 250px; 
+	filter: grayscale(100%);
+
+}
+/* FOOTER */
+
+footer{
+	background-color: #F78E69;
+	color: white;
+	font-weight: bold;
+	padding: 10px;
+	text-align: right;	
+
+
+}
+
